<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.bcbs239</groupId>
		<artifactId>regtech</artifactId>
		<version>0.0.1-SNAPSHOT</version>
	</parent>
	<artifactId>regtech-data-quality</artifactId>
	<packaging>pom</packaging>
	<name>regtech-data-quality</name>
	<description>Data Quality module for Regtech application - Modular Monolith</description>
	
	<modules>
		<module>domain</module>
		<module>application</module>
		<module>infrastructure</module>
		<module>presentation</module>
	</modules>
	
	<properties>
		<!-- Temporarily set to JDK 21 to restore Lombok annotation processor compatibility until Lombok upgrades for JDK 25 -->
		<maven.compiler.source>25</maven.compiler.source>
		<maven.compiler.target>25</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		
		<!-- Version management for data quality module dependencies -->
		<aws.sdk.version>2.21.29</aws.sdk.version>
		<jackson.version>2.15.2</jackson.version>
	</properties>
	
	<dependencyManagement>
		<dependencies>
			<!-- Internal module dependencies -->
			<dependency>
				<groupId>com.bcbs239</groupId>
				<artifactId>regtech-data-quality-domain</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bcbs239</groupId>
				<artifactId>regtech-data-quality-application</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bcbs239</groupId>
				<artifactId>regtech-data-quality-infrastructure</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.bcbs239</groupId>
				<artifactId>regtech-data-quality-presentation</artifactId>
				<version>${project.version}</version>
			</dependency>
			
			<!-- Core module dependency -->
			<dependency>
				<groupId>com.bcbs239</groupId>
				<artifactId>regtech-core</artifactId>
				<version>${project.version}</version>
				<type>pom</type>
			</dependency>
			
			<!-- AWS SDK for S3 operations -->
			<dependency>
				<groupId>software.amazon.awssdk</groupId>
				<artifactId>s3</artifactId>
				<version>${aws.sdk.version}</version>
			</dependency>
			
			<!-- Jackson for JSON processing -->
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<configuration>
						<source>25</source>
						<target>25</target>
						<enablePreview>true</enablePreview>
						<parameters>true</parameters>
	                        <annotationProcessorPaths>
	                            <path>
	                                <groupId>org.projectlombok</groupId>
	                                <artifactId>lombok</artifactId>
									<version>${lombok.version}</version>
	                            </path>
	                        </annotationProcessorPaths>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<configuration>
						<skip>true</skip>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<configuration>
						<includes>
							<include>**/*Test.java</include>
						</includes>
						<excludes>
							<exclude>**/*IntegrationTest.java</exclude>
						</excludes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-failsafe-plugin</artifactId>
					<configuration>
						<includes>
							<include>**/*IntegrationTest.java</include>
						</includes>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>integration-test</goal>
								<goal>verify</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
	<profiles>
		<profile>
			<id>integration-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>